--- a/Templates/base/sidebar.html
+++ b/Templates/base/sidebar.html
@@ -46,7 +46,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/doctors">
+                <a class="nav-link" href="/admin_feedbacks/admin-feedback">
                     <span class="icon">✍️</span>
                     Feedback
                 </a>
