--- a/Templates/base/sidebar.html
+++ b/Templates/base/sidebar.html
@@ -84,7 +84,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/services">
+                <a class="nav-link" href="{{ url_for('service.services_page') }}">
                     <span class="icon">🏥</span>
                     Services
                 </a>
